@@ -15,4 +15,4 @@ isa_ok(Database::test1->new({ directory => $tmpdir }), 'Database::test1', 'Creat
 isa_ok(Database::test1->new(directory => $tmpdir), 'Database::test1', 'Creating Database::test1 object');
 # FIXME: Use of inherited AUTOLOAD for non-method Database::test1::new() is no longer allowed
 # isa_ok(Database::test1::new('/'), 'Database::test1', 'Creating Database::test1 object');
-# ok(!defined(Database::test1::new()));
+# is_ok(Database::test1::new()));
