@@ -4,6 +4,7 @@ Revision history for Database-Abstraction
 	Added id parameter
 	Slurp small XML files using XML::Simple
 	Fix uninitialised error when slurp_file doesn't exist
+	Use features of File::pfopen version 0.03
 
 0.10	Thu Sep 19 08:17:55 EDT 2024
 	Added t/init.t
